`fix`: 🐛 slides spacing with breakpoints

--- a/tailwind/tailwind.css
+++ b/tailwind/tailwind.css
@@ -924,11 +924,8 @@ html {
 }
 
 .swiper-slide {
-	width: 30%;
-}
-
-.swiper-slide-active {
-	width: 70%;
+	overflow: hidden;
+	border-radius: 16px;
 }
 
 .swiper-slide img {
